flux/apps/backend-services/agentfarm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    external-dns.alpha.kubernetes.io/hostname: agentfarm.${subdomain}.${domain}.
    nginx.ingress.kubernetes.io/client-body-buffer-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 12m
  name: agentfarm
  namespace: backend-services
spec:
  ingressClassName: "ingress-nginx"
  rules:
  - host: agentfarm.${subdomain}.${domain}
    http:
      paths:
      - backend:
          service:
            name: agentfarm
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - agentfarm.${subdomain}.${domain}
    secretName: agentfarm-services-tls
